# traval

./: .gitignore  .prospector.yaml  .readthedocs.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: conf.py  examples.rst  getting_started.rst  index.rst  modules.rst
docs/examples/: ex01_introduction_traval.nblink  ex02_traval_on_full_dataset.nblink  ex03_rules.nblink
examples/data/: manual_validation_series.csv  raw_series.csv  sensor_level_nap.csv  top_piezometer_level.csv
examples/notebooks/: ex01_applying_automatic_error_detection_algorithms_to_a_timeseries.ipynb  ex02_full_dataset_test.ipynb  ex03_testing_rules.ipynb
tests/: test_001.py  test_002_ruleset.py  test_003_detector.py  test_004_comparison.py  test_005_plots.py  test_006_rulelib.py  test_007_binaryclassifier.py  test_008_travalparameters.py
traval/: __init__.py  binary_classifier.py  detector.py  params.py  plots.py  rulelib.py  ruleset.py  ts_comparison.py  ts_utils.py  version.py
